- add back jetty-ee8-maven-plugin - add back jetty-ee8-jspc-maven-plugin - remove not used site plugin and simplify code - moving back ee9 maven plugin ITs to the module - back of ee10 maven ITs test to the plugin module
Signed-off-by: Olivier Lamy <oliver.lamy@gmail.com>